UI/css/style.css
body {
  background-color: #f1f1f1;
  background-size: cover;
  color: #000305;
  font-size: 87.5%;
  background-repeat: no-repeat;
  font-family: Arial, "Lucida Sans Unicode";
  line-height: 1.5;
  text-align: left;
}
.body {
  margin: 0 auto;
  width: 80%;
  clear: both;
}
.mainheader nav {
  font-size: 20px;
  text-decoration: none;
  padding-top: 30px;
  background-color: rgb(36, 88, 138);
  height: 120px;
  color: #ffff;
}
a {
  color: #ffff;
  text-decoration: none;
}
a:hover {
  color: rgb(250, 226, 10);
}
.mainheader nav ul {
  text-align: center;
  list-style-type: none;
}
.mainheader nav ul li {
  float: right;
  display: inline-block;
}
.mainheader nav a:link {
  color: #ffffff;
  display: inline-block;
  padding: 10px 25px;
  height: 50px;
  padding-top: 10px;
}
h1 {
  font-size: 50px;
  margin-left: 25px;
  margin-top: 10px;
  color: #acacac;
  float: left;
  display: inline-block;
}

h1 a {
  text-decoration: none;
  color: #ffffff;
}
h1 a span {
  float: left;
  float: right;
  margin-right: 0;
  margin-top: 10px;
  color: rgb(128, 36, 0);
}
h2 {
  margin-top: 5px;
  font-size: 17px;
}

.how-heading {
  padding: 30px;
  margin-top: 30px;
  text-align: center;
  color: #000305;
  font-size: 17px;
}
.mainContent {
  line-height: 20px;
  border-radius: 5px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
}

.rightContent {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  background-color: #acacac;
  padding: 3% 5%;
  float: right;
  width: 265px;
  background: rgba(250, 250, 250, 0.3);
  height: 350px;
}
.rightContent img {
  width: 270px;
  height: 350px;
  border-radius: 5px;
}

.rightContent nav ul {
  border-radius: 3px;
  list-style-type: none;
  line-height: 2;
  background: rgb(36, 88, 138);
  padding: 20px;
  margin: 20px;
  text-transform: lowercase;
  font-size: 20px;
}
.rightContent li a {
  display: block;
  text-align: center;
  border-bottom: 2px solid #ffffff;
}
td a {
  text-align: center;
  text-decoration: none;
  color: #000;
}
.leftContent {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  background: rgba(250, 250, 250, 0.3);
  float: left;
  height: 350px;
  padding: 3% 5%;
  margin-left: 0px;
}

.leftContent img {
  align: middle;
  padding-left: 10px;
  float: left;
  border-radius: 5px;
}
.contactContent {
  width: 80%;
}
table {
  width: 100%;
  margin: 0 auto;
  background: #ffffff;
}
table h1 {
  padding: 10px;
  margin-top: 20px;
}
th {
  background: rgb(36, 88, 138);
  height: 54px;
  text-align: center;
  color: #ffffff;
  border: none;
  border-bottom: 2px solid #acacac;
  transition: all 0.2s;
}
tr {
  border-bottom: 2px solid #acacac;
}
tr:last-child {
  border-bottom: 0px;
}
td {
  border-right: 1px solid #cccccc;
  padding: 10px;
  transition: all 0.2s;
}
td:last-child {
  border-right: 0px;
}
input[type="email"] {
  padding: 10px;
  width: 100%;
  font-size: 17px;
  border: none;
  border-bottom: 2px solid #acacac;
}
input[type="password"] {
  padding: 10px;
  width: 100%;
  font-size: 17px;
  border: none;
  border-bottom: 2px solid #acacac;
}

input[type="date"] {
  color: #acacac;
  text-transform: uppercase;
  font-size: 20px;
  white-space: initial;
  text-align: center;
  height: 45px;
  width: 450px;
  border: none;
  border-bottom: 2px solid #acacac;
}
select {
  padding: 10px;
  width: 286px;
  font-size: 17px;
  border: none;
  border-bottom: 2px solid #acacac;
}
table p {
  color: #acacac;
  font-weight: bold;
  font-size: 17px;
}
div p a {
  color: #000305;
}
button {
  background-color: rgb(36, 88, 138);
  color: #ffffff;
  font-weight: bold;
  border: none;
  padding: 10px 20px;
  font-size: 17px;
  cursor: pointer;
}
table .button-approve {
  background-color: rgb(36, 88, 138);
  color: #f1f1f1;
  font-weight: bold;
  border: none;
  padding: 10px 20px;
  font-size: 17px;
  cursor: pointer;
}
table .button-deny {
  background-color: rgb(248, 7, 7);
  color: #ffffff;
  font-weight: bold;
  border: none;
  padding: 10px 20px;
  font-size: 17px;
  cursor: pointer;
}
.mainFooter {
  width: 100%;
  float: left;
  clear: both;
  font-size: 20px;
  height: 100px;
  background-color: rgb(36, 88, 138);
  margin: 2% 0;
}
.mainFooter p {
  padding-top: 30px;
  text-align: center;
  width: 92%;
  margin: 10px auto;
  color: #ffffff;
}
.column {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  background-color: #acacac;
  padding: 3% 5%;
  float: left;
  margin-left: 5px;
  width: 270px;
  background: rgba(250, 250, 250, 0.3);
}
.column1 {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  background-color: #acacac;
  padding: 3% 5%;
  float: right;
  margin-right: 8px;
  width: 230px;
  background: rgba(250, 250, 250, 0.3);
}

.row {
  margin: 0 -5px;
}
.row:after {
  content: "";
  /*display: table;*/
  clear: both;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}
/*------Media queries for responsive diesign-----*/
@media only screen and (min-width: 150px) and (max-width: 900px) {
  .body {
    max-width: 100%;
    font-weight: 90%;
  }
  .mainheader nav {
    max-width: 100%;
    height: 200px;
  }
  h1 {
    font-size: 50px;
    margin-left: 25px;
    margin-top: 10px;
    color: #acacac;
    float: left;
    display: inline-block;
  }
  .leftContent img {
    margin-top: 5px;
    height: 150px;
  }
  .rightContent img {
    width: 100%;
  }
  .mainheader nav ul {
    padding-left: 0;
  }
  .mainheader nav ul li {
    width: 100%;
    text-align: center;
  }
  a:hover {
    color: rgb(250, 226, 10);
  }
  .how-heading {
    margin: 5px;
  }

  .rightContent,
  .leftContent,
  .column1,
  .column {
    float: left;
    width: 100%;
    margin-left: 2%;
    margin-right: 2%;
    padding: 2% 3%;
  }

  .rightContent caption {
    font-size: 14px;
  }

  .mainFooter {
    width: 100%;
  }
}

